--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
   <title>Maryia Vinogradova</title>
 </head>
 
-<body>
+<body class="mw-100">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
