--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Lexend+Zetta:wght@500&family=Montserrat:wght@200&family=MuseoModerno:wght@700&family=Oswald:wght@500&family=Pacifico&family=Permanent+Marker&family=Satisfy&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Arimo:wght@700&family=DynaPuff&family=Lemon&family=Lexend+Zetta:wght@500&family=Montserrat:ital,wght@0,700;1,700&family=Mulish:wght@700&family=MuseoModerno:wght@700&family=Oswald:wght@500&family=Pacifico&family=Permanent+Marker&family=Raleway:wght@800&family=Satisfy&display=swap" rel="stylesheet" rel="stylesheet">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
